# DR-CDJ

./: .gitignore  AGENTS.md  CDJ-Check.icns  CDJ-Check.spec  CDJ-Check_PRD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dr-CDJ.spec  GITHUB_SETUP.md  INSTALL.html  LICENSE  README.md  RELEASE_CHECKLIST.md  build.py  create-dmg-final.sh  create-dmg-installer.sh  create-dmg-manual.sh  create-dmg-with-readme.sh  create-dmg.sh  create_icon.py  install-app.sh  install.py  push-to-github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: README_ICONS.md
docs/: TROUBLESHOOTING_FFMPEG.md  USER_MANUAL.md  index.html
docs/assets/: README.md
docs/internal/: AGENTS.md  GITHUB_SETUP.md  dr-cdj-landing.html
hooks/: hook-ffmpeg.py  hook-tkinter.py
remotion-dr-cdj-stories/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion-dr-cdj-stories/src/: index.tsx
remotion-dr-cdj-stories/src/stories/: Story1_Intro.tsx  Story2_Features.tsx  (+1 more)
scripts/: diagnose-ffmpeg.sh  download-ffmpeg.py  generate_icon.py
src/cdj_check/: __init__.py  analyzer.py  compatibility.py  config.py  converter.py  gui.py  main.py  splash.py
src/dr_cdj/: __init__.py  analyzer.py  compatibility.py  config.py  converter.py  ffmpeg_downloader.py  gui.py  main.py  splash.py  utils.py
tests/: __init__.py  test_analyzer.py  test_compatibility.py  test_converter.py
